# meta-pytorch-hackathon

./: .gitignore  Dockerfile  README.md  check_output.txt  check_project.py  docker_build_log.txt  example_trajectory.md  inference.py  inference_log.txt  inference_log2.txt  inference_log3.txt  inference_results.json  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  step_body.json
app/: environment.py  main.py  models.py
app/graders/: grader_easy.py  grader_hard.py  grader_medium.py
app/tasks/: task1_easy.py  task2_medium.py  task3_hard.py
client/: README.md  package-lock.json
docs/: architecture.md  demo-script.md  reward-design.md  task-design.md
inference/prompts/: agent_prompt.txt
scripts/: generate-report.js  smoke-test.js
server/: README_SERVER.md  app.py  package-lock.json  package.json
server/src/: server.js
server/src/controllers/: envController.js
server/src/tests/: api.test.js
sql_repair_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_env.py  test_environment.py
triage_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
