[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-repair-env"
version = "1.0.0"
description = "OpenEnv SQL Repair Environment — AI agents fix broken SQL queries and clean dirty data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["openenv", "sql", "data-cleaning", "reinforcement-learning", "agent"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "pandas==2.2.2",
    "openai==1.30.1",
    "httpx==0.27.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/chitt-hirpara/sql-repair-env"
"Repository" = "https://huggingface.co/spaces/chitt-hirpara/sql-repair-env"
